<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/backgroundDefault"
    android:orientation="vertical"
    android:padding="12dp">

    <TextView
        style="@style/textViewTitleBig"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"
        android:text="@string/home_filter_title" />

    <LinearLayout
        android:id="@+id/layoutLocation"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="12dp">

        <TextView
            style="@style/textViewDefault"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/settings_location" />

        <TextView
            android:id="@+id/textViewInfoLocation"
            style="@style/textViewAction"
            android:gravity="end"
            tools:text="[29, 35]" />

    </LinearLayout>

    <View style="@style/separatorDefault" />

    <LinearLayout
        android:id="@+id/layoutRaceType"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="12dp">

        <TextView
            style="@style/textViewDefault"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/settings_race_types" />

        <TextView
            android:id="@+id/textViewInfoRaceType"
            style="@style/textViewAction"
            android:gravity="end"
            tools:text="5" />

    </LinearLayout>

    <View style="@style/separatorDefault" />

    <LinearLayout
        android:id="@+id/layoutRaceFormat"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginBottom="16dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="12dp">

        <TextView
            style="@style/textViewDefault"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/settings_race_formats" />

        <TextView
            android:id="@+id/textViewInfoRaceFormat"
            style="@style/textViewAction"
            android:gravity="end"
            tools:text="5" />

    </LinearLayout>


</LinearLayout>