<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutContent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/backgroundDefault"
    android:orientation="vertical"
    android:padding="12dp">

    <TextView
        style="@style/textViewTitleBig"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:gravity="center"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"
        android:text="@string/race_engage_title" />

    <LinearLayout
        android:id="@+id/layoutEngage2"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            style="@style/textViewEmoji"
            android:layout_width="40dp"
            android:layout_marginStart="8dp"
            android:text="😁"
            tools:ignore="HardcodedText" />

        <TextView
            style="@style/textViewDefault"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/race_engage_2" />

    </LinearLayout>

    <View style="@style/separatorDefault" />

    <LinearLayout
        android:id="@+id/layoutEngage1"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            style="@style/textViewEmoji"
            android:layout_width="40dp"
            android:layout_marginStart="8dp"
            android:text="🤔"
            tools:ignore="HardcodedText" />

        <TextView
            style="@style/textViewDefault"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/race_engage_1" />

    </LinearLayout>

    <View style="@style/separatorDefault" />

    <LinearLayout
        android:id="@+id/layoutEngage0"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginBottom="16dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            style="@style/textViewEmoji"
            android:layout_width="40dp"
            android:layout_marginStart="8dp"
            android:text="😕"
            tools:ignore="HardcodedText" />

        <TextView
            style="@style/textViewDefault"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/race_engage_0" />

    </LinearLayout>

</LinearLayout>